--- a/theme/index.hbs
+++ b/theme/index.hbs
@@ -220,7 +220,8 @@
                 </div>
                 <main>
                     {{{ content }}}
-                    <div id="giscus-container"></div>
+                    <!-- 暂时关闭评论 -->
+                    <!--<div id="giscus-container"></div>-->
                 </main>
 
                 <nav class="nav-wrapper" aria-label="Page navigation">
